# spcasm

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CNAME  Cargo.toml  Justfile  LICENSE  README.md  build.rs  hudpags.toml  opcodes.txt  rust-toolchain.toml  rustfmt.toml  test.spcasm
.cargo/: config.toml
.github/: dependabot.yml  nextest-ci.toml
.github/workflows/: miri.yml  release.yml  rust.yml  site.yml
doc/: book.toml  copy-readme-for-gh-pages.sh  error-examples.tape
doc/src/: SUMMARY.md  errors.md  terminology.md  troubleshooting.md  usage.md
doc/src/dev/: README.md  architecture.md  sapemu.md
doc/src/reference/: README.md  complex_segments.s  directives.md  instructions.md
doc/theme/: highlight.js
examples/: bootrom.spcasm  brr.spcasm  errorneous.spcasm  include.spcasm  labels.spcasm  multifile.spcasm  new_parser.spcasm  parse.spcasm  references.spcasm  test-asar.spcasm  test.spcasm  user-macro.spcasm
examples/cli/: help.trycmd  warnings.trycmd
examples/errors/: addressing-combination.spcasm  addressing-mode.spcasm  assign-to-argument.spcasm  assign-to-macro-global.spcasm  audio-processing.spcasm  circular-include.spcasm  circularly-included.spcasm.noerror  empty-segment-stack.spcasm  file-not-found.spcasm  label-in-org.spasm  macro-argument-as-label.spcasm  math-pri.spcasm  missing-global.spcasm  missing-operand.spcasm  missing-segment-after-pop.spcasm  no-operand.spcasm  parser-bit-index.spcasm  parser-colon.spasm  parser-dangling.spcasm  parser-hash.spcasm  parser-invalid-number.spcasm  parser-invalid-range.spcasm  parser-missing-token.spcasm  parser-superflous-dash-in-range.spcasm  parser-test-comment.spcasm  range-out-of-bounds.spcasm  recursive-macro.spcasm  segment-mismatch.spcasm  too-few-arguments.spcasm  too-large-macro-argument.spcasm  too-many-arguments.spcasm  two-operands.spcasm  undefined-macro-argument.scpasm  undefined-macro.spcasm  unresolved-label.spcasm  unsupported-arch.spcasm
examples/included/: collection.spcasm  libb.spcasm
include/: apu.s  bootrom.s
sals/: Cargo.toml  README.md  build.rs
sals/src/: interface.rs  main.rs  semantic_token.rs
sals/vscode/: .vscodeignore  language-configuration.json  package.json  sals-vscode-0.0.1.vsix  syntax.tmLanguage.json  tsconfig.json
sals/vscode/src/: extension.ts
sapemu/: Cargo.toml
sapemu/src/: dsp.rs  log.rs  main.rs  memory.rs  smp.rs  test.rs
sapemu/src/dsp/: audio_processing.rs  registers.rs  tables.rs
sapemu/src/smp/: ops.rs  peripherals.rs  upload.rs
spcasm-web/: .gitignore  Cargo.toml  Trunk.toml  index.html  index.js  lib.js  main.css
spcasm-web/src/: lib.rs  options.rs
spcasm-web/www/: index.html  index.js  lib.js  main.css  normalize.css  package-lock.json  package.json  webpack.config.js
spcasm_derive/: Cargo.toml
spcasm_derive/src/: lib.rs
spcfile/: Cargo.toml  README.md
spcfile/examples/: spcdump.rs
spcfile/src/: lib.rs  parser.rs
src/: asm.lalrpop  assembler.rs  change.rs  cli.rs  common.rs  default_hacks.rs  directive.rs  elf.rs  error.rs  instruction.rs  label.rs  lalrpop_adaptor.rs  lexer.rs  lib.rs  macro.rs  main.rs  mcro.rs  parser.rs  program.rs  register.rs  segments.rs  source.rs  spcasm.rs  test.rs  token.rs
src/assembler/: arithmetic_logic.rs  bit.rs  branching.rs  directive.rs  memory.rs  mod.rs  mov.rs  r16bit.rs  sample_table.rs  table.rs
src/brr/: cli.rs  dsp.rs  interactive.rs  mod.rs  test.rs  wav.rs
src/parser/: asm.lalrpop  instruction.rs  label.rs  lalrpop_adaptor.rs  lexer.rs  mod.rs  program.rs  reference.rs  register.rs  token.rs  value.rs
src/sema/: addressing_mode.rs  environment.rs  file.rs  instruction.rs  mod.rs  program.rs  reference.rs  register.rs  test.rs  value.rs
tests/: bit-index-overflow.s  brr.spcasmtest  compiletime-compute.spcasmtest  end.spcasmtest  entrypoint.s  fill-pad-skip.spcasmtest  include.spcasmtest  library.s  multifile.spcasmtest  number-identifier.spcasmtest  opcodes.s  parse.spcasmtest  references.spcasmtest  relative-large-offset.spcasmtest  relative_labels.spcasmtest  repeat.spcasmtest  user-macro.spcasmtest
tests/cli/: bit-index.trycmd  brr.trycmd  debug.trycmd  help.trycmd  limits.trycmd  output.trycmd  warnings.trycmd
tests/errors/: addressing-combination.spcasmtest  addressing-mode.spcasmtest  argument-count-mismatch.spcasm  assign-to-macro-argument.spcasm  audio-processing.spcasmtest  brr-file-not-found.spcasmtest  circular-include.spcasmtest  circular-local.spcasmtest  circular-references.spcasmtest  circularly-included.spcasmtest.noerror  double-define.spcasmtest  duplicate-startpos.spcasmtest  empty-expect-list.spcasmtest  empty-segment-stack.spcasmtest  file-not-found.spcasmtest  fill-with-missing-segment.spcasmtest  incbin-file-not-found.spcasmtest  invalid-brr-option.spcasmtest  invalid-number.spcasmtest  label-in-org.spcasmtest  macro-argument-as-label.spcasmtest  macro-argument-outside-macro.spcasm  macro-argument-outside-macro.spcasmtest  missing-fill-value.spcasmtest  missing-global.spcasmtest  missing-operand.spcasmtest  missing-second-operand.spcasmtest  missing-segment-after-pop.spcasmtest  no-operand.spcasmtest  parser-bit-index.spcasmtest  parser-colon.spcasmtest  parser-dangling.spcasmtest  parser-extra-token.spcasmtest  parser-hash.spcasmtest  parser-invalid-number.spcasmtest  parser-missing-token.spcasmtest  parser-test-comment.spcasmtest  parser-too-large-number.spcasmtest  pseudo-reference.spcasmtest  range-out-of-bounds.spcasmtest  (+17 more)
tests/included/: collection.s  liba.s
tests/regression/: mov1-dp.spcasmtest
