[workspace]
members = [".", "spcasm_derive", "spcasm-web", "sals"]

[package]
name = "spcasm"
description = "A modern, user-friendly SPC700 assembler."
homepage = "https://kleinesfilmroellchen.github.io/spcasm/"
repository = "https://github.com/kleinesfilmroellchen/spcasm"
keywords = ["spc-700", "s-smp", "snes"]
categories = [
	"compilers",
	"command-line-utilities",
	"development-tools",
	"multimedia::audio",
]
authors = ["kleines Filmröllchen <filmroellchen@serenityos.org>"]
version = "0.2.0"
license-file = "LICENSE"

edition = "2021"
rust-version = "1.56"
build = "build.rs"

default-run = "spcasm"

[lib]
name = "spcasm"
path = "src/lib.rs"
required-features = []

[[bin]]
name = "spcasm"
# shut up cargo
path = "src/../src/lib.rs"
required-features = ["binaries"]
test = false
bench = false

[[bin]]
name = "brr"
path = "src/brr/cli.rs"
required-features = ["binaries"]
test = false
bench = false

[features]
default = ["binaries"]
binaries = ["dep:clap", "dep:object", "dep:shadow-rs"]

[dependencies]
object = { version = "0.30", features = [
	"write_core",
	"write_std",
	"elf",
], optional = true, default-features = false }
parking_lot = "0.12"
thiserror = "1"
lalrpop-util = "0.19"
wav = "1"
num-traits = "0.2"
num-derive = "0.3"
arrcat = "0.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
human-panic = { version = "1.1.4", optional = true }
flexstr = { version = "0.9.2", features = ["int_convert", "serde"] }

[dependencies.shadow-rs]
version = "0.21"
optional = true
default-features = false

[dev-dependencies]
trycmd = { version = "0.14", default-features = false, features = [
	"filesystem",
] }
reqwest = { version = "0.11", features = ["blocking"] }

[build-dependencies]
lalrpop = { version = "0.19", default-features = false }

[build-dependencies.shadow-rs]
version = "0.21"
optional = true
default-features = false

[dependencies.miette]
features = ["fancy-no-backtrace"]
version = "5"

# Only compile clap for the CLIs.
[dependencies.clap]
version = "4.1"
optional = true
features = ["derive", "wrap_help", "string"]

[dependencies.spcasm_derive]
path = "spcasm_derive"

[profile.release]
opt-level = "s"
lto = true
debug-assertions = false
debug = false

[profile.bench]
opt-level = 3
debug = 2
lto = "thin"
debug-assertions = true
incremental = true

# This is the actual release profile; wasm-pack can't use custom profiles so we reserve "release" for it.
[profile.spcasm-release]
inherits = "release"
# If you need ~0.5MiB less binary size, change this to "fat" LTO.
lto = "thin"
opt-level = 3
incremental = true

# Cross configuration
[package.metadata.cross.target.x86_64-unknown-linux-gnu]
pre-build = [
	"apt-get update && apt-get install -y openssl clang",
] # openssl seems to be outdated otherwise
