[package]
name = "sals"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.14"
env_logger = "0.10.0"
serde_json = "1.0.96"
tokio = { version = "1.29.1", features = ["full"] }
tower-lsp = { version = "0.19.0", features = ["proposed"] }
serde = { version = "1.0", features = ["derive"] }
dashmap = "5.1.0"
parking_lot = "0.12"
spcasm = { path = ".." }
flexstr = { version = "0.9.2", features = ["int_convert", "serde"] }

[dependencies.miette]
features = ["fancy-no-backtrace"]
version = "5"

[dependencies.shadow-rs]
version = "0.21"
default-features = false

[build-dependencies.shadow-rs]
version = "0.21"
default-features = false
