[package]
name = "sals"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
log = "0.4.20"
env_logger = "0.11.3"
serde_json = "1.0.135"
tokio = { version = "1.38", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"] }
serde = { version = "1.0", features = ["derive"] }
dashmap = "6.1"
parking_lot = "0.12"
spcasm = { path = ".." }
flexstr = { version = "0.9.2", features = ["int_convert", "serde"] }

[dependencies.miette]
features = ["fancy-no-backtrace"]
version = "7"

[dependencies.shadow-rs]
version = "0.36"
default-features = false

[build-dependencies.shadow-rs]
version = "0.36"
default-features = false

[lints]
workspace = true
