[package]
name = "sapemu"
description = "SNES S-APU emulator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
human-panic = "2"
log = "0.4"
time = "0.3"

object = { version = "0.36", features = [
	"read",
	"elf",
], default-features = false }
simple_logger = "5"
bitflags = "2"

[dependencies.spcasm]
path = ".."
features = ["binaries"]

[dependencies.clap]
version = "4.4"
features = ["derive", "wrap_help", "string"]

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
serde = "1"
serde_json = "1.0.128"
rstest = "0.22.0"
simd-json = { version = "0.13", features = ["known-key"] }

[lints]
workspace = true
