[package]
name = "sapemu"
description = "SNES S-APU emulator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
human-panic = "2"
log = "0.4"
time = "0.3"

object = { version = "0.37", features = [
	"read",
	"elf",
], default-features = false }
simple_logger = "5"
bitflags = "2"
anyhow = "1"
spcfile = { path = "../spcfile" }
num-traits = "0.2"
num-derive = "0.4"

[dependencies.spcasm]
path = ".."
features = ["binaries"]

[dependencies.clap]
version = "4.5"
features = ["derive", "wrap_help", "string"]

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = "1"
rstest = "0.25"
simd-json = { version = "0.15", features = ["known-key"] }

[lints]
workspace = true
