[package]
name = "spcasm-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
web-sys = { version = "0.3.60", features = [
	"Window",
	"Document",
	"Element",
	"HtmlElement",
	"Node",
	"console",
] }

regex = { version = "1.6.0", default-features = false, features = [
	"unicode",
	"std",
] }
once_cell = { version = "1.15.0", default-features = false, features = [
	"alloc",
] }

spcasm = { path = "../", default-features = false }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }
html-escape = { version = "0.2.12", default-features = false }
js-sys = "0.3.60"
miette = { version = "5.3.0", features = ["fancy-no-backtrace"] }
