[package]
name = "spcasm-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
autobins = false

[lib]
crate-type = ["bin"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = [
	"Window",
	"Document",
	"Element",
	"HtmlElement",
	"Node",
	"console",
] }

flexstr = { version = "0.9.2" }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

regex = { version = "1.8.4", default-features = false, features = [
	"unicode",
	"std",
] }
parking_lot = "0.12"

spcasm = { path = "../", default-features = false }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
html-escape = { version = "0.2.13", default-features = false }
js-sys = "0.3.69"
# fancy-no-syscall so that it works on wasm targets
miette = { version = "7", features = ["fancy-no-syscall"] }
talc = { version = "4.4.1", features = ["lock_api"] }
