[package]
name = "spcasm_derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1.0"
smartstring = "1"
flexstr = "0.9.2"

[lints]
workspace = true
