[package]
name = "spcfile"
description = ".spc file format reading and writing"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
chrono = { version = "0.4.38", default-features = false }
nom = "7.1.3"
thiserror = "2.0.6"

[lints]
workspace = true
